# zedhat

./: .appveyor.yml  .gitignore  .travis.yml  CNAME  LICENSE  Makefile.am  README.md  TODO  astylerc  autogen  configure.ac  cov  index.html  params.json  testsuite.at
.github/: FUNDING.yml
.woodpecker/: Dockerfile-ubuntu-build:latest  docker-rebuild  woodpecker.yml
m4/: ax_cblas.m4  ax_check_zlib.m4  ax_lapacke.m4
man/: zedhat.1
src/: argv.c  argv.h  config.h.in  file.c  file.h  fwd.c  fwd.h  inv.c  inv.h  matrix.c  matrix.h  model.c  model.h  readngvol.c  readngvol.h  zedhat.c
tests/: cmocka.c  cmocka.h  cmocka_version.h  file.c  fwd.c  inv.c  libcblas_dgemm.c  libcholmod.c  libcholmod_solve.c  liblapacke_dgels.c  libmatio.c  libumfpack.c  libumfpack_solve.c  m1.zh  m1f.zh  m1i.zh  m1imgfwd.zh  m2.zh  m2f.zh  m2i.zh  m2imgfwd.zh  matrix.c  model.c  ngcube.vol  perf.c  readngvol.c  testAXB-v4.mat  testAXB-v6.mat  testAXB-v7.mat  testAXB-v73.mat  testAXB.m  testa.mat  testab.mat  testb.mat
tests/travis/: Dockerfile  boot  build
